@@ -7,7 +7,9 @@ import com.lms.assignment.submission.AssignmentSubmissionRepository;
 import com.lms.user.User;
 import com.lms.user.UserRepository;
 import org.apache.poi.ss.usermodel.*;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.apache.poi.ss.util.CellRangeAddress;
+import org.apache.poi.xddf.usermodel.chart.*;
+import org.apache.poi.xssf.usermodel.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -21,7 +23,6 @@ public class PerformanceService {
 
     private final AttendanceRepository attendanceRepository;
     private final AssignmentSubmissionRepository assignmentSubmissionRepository;
-    // quizSubmissionRepository to be added later
     private final UserRepository userRepository;
 
     @Autowired
@@ -46,34 +47,28 @@ public class PerformanceService {
                 .collect(Collectors.toList());
 
         rows.add(0, List.of("Student ID", "Student Name", "Grade"));
-        return generateExcelFile("Grades Report", rows);
+        return generateExcelFile("Grades Report", rows, "Scores Chart", "Student Name", "Scores");
     }
 
     public byte[] generateAttendanceExcelReport(Long courseId) {
-        // Fetch attendance records for the course
         List<AttendanceRecord> attendanceRecords = attendanceRepository.findByIdCourseId(courseId);
 
-        // Fetch student names
         Map<Long, String> studentNames = fetchStudentNames();
 
-        // Get distinct lesson IDs and sort them to ensure consistent order
         List<Long> lessonIds = attendanceRecords.stream()
                 .map(record -> record.getId().getLessonId())
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
-        // Group attendance records by student
         Map<Long, List<AttendanceRecord>> attendanceByStudent = attendanceRecords.stream()
                 .collect(Collectors.groupingBy(record -> record.getId().getStudentId()));
 
-        // Build the header row: "Student Name, Lesson 1, Lesson 2, ..., Total"
         List<String> header = new ArrayList<>();
         header.add("Student Name");
         lessonIds.forEach(lessonId -> header.add("Lesson " + lessonId));
         header.add("Total (%)");
 
-        // Build data rows
         List<List<String>> rows = new ArrayList<>();
         rows.add(header); // Add the header row
 
@@ -81,71 +76,53 @@ public class PerformanceService {
             Long studentId = entry.getKey();
             List<AttendanceRecord> studentRecords = entry.getValue();
 
-            // Initialize row with student name
             List<String> row = new ArrayList<>();
             row.add(studentNames.getOrDefault(studentId, "Unknown Student"));
 
-            // Map lesson attendance status (true = attended, false = not attended)
             Map<Long, Boolean> lessonAttendance = studentRecords.stream()
                     .collect(Collectors.toMap(
                             record -> record.getId().getLessonId(),
                             AttendanceRecord::isAttended
                     ));
 
-            // Fill row with attendance status for each lesson
             int attendedCount = 0;
             for (Long lessonId : lessonIds) {
                 boolean attended = lessonAttendance.getOrDefault(lessonId, false);
-                row.add(attended ? "✔" : "✘"); // Use checkmarks for clarity
+                row.add(attended ? "YES" : "NO");
                 if (attended) {
                     attendedCount++;
                 }
             }
 
-            // Add total percentage
-            double totalPercentage = (lessonIds.size() > 0) ? ((double) attendedCount / lessonIds.size()) * 100 : 0.0;
+            double totalPercentage = (!lessonIds.isEmpty()) ? ((double) attendedCount / lessonIds.size()) * 100 : 0.0;
             row.add(String.format("%.2f %%", totalPercentage));
 
             rows.add(row);
         }
 
-        return generateExcelFile("Attendance Report", rows);
+        return generateExcelFile("Attendance Report", rows, "Attendance Chart", "Student Name", "Attendance (%)");
     }
 
     private Map<Long, String> fetchStudentNames() {
-        // Fetch all users and map their IDs to names
         return userRepository.findAll().stream()
                 .collect(Collectors.toMap(
-                        user -> (long) user.getId(), // Convert `int` ID to `Long` to match other mappings
+                        user -> (long) user.getId(),
                         User::getName
                 ));
     }
 
-
     private Map<Long, Double> calculateGrades(Long courseId) {
         List<AssignmentSubmission> submissions = assignmentSubmissionRepository.findAllByAssignmentId(courseId);
 
-        // Aggregate scores by student
-        Map<Long, List<AssignmentSubmission>> submissionsByStudent = submissions.stream()
-                .collect(Collectors.groupingBy(AssignmentSubmission::getStudentId));
-
-        Map<Long, Double> averageGrades = new HashMap<>();
-        submissionsByStudent.forEach((studentId, studentSubmissions) -> {
-            double totalScore = studentSubmissions.stream()
-                    .filter(submission -> submission.getScore() != null) // Only consider graded submissions
-                    .mapToDouble(AssignmentSubmission::getScore)
-                    .sum();
-            long gradedSubmissions = studentSubmissions.stream()
-                    .filter(submission -> submission.getScore() != null)
-                    .count();
-            double averageScore = (gradedSubmissions > 0) ? totalScore / gradedSubmissions : 0.0;
-            averageGrades.put(studentId, averageScore);
-        });
-
-        return averageGrades;
+        return submissions.stream()
+                .filter(submission -> submission.getScore() != null)
+                .collect(Collectors.groupingBy(
+                        submission -> (long) submission.getStudent().getId(),
+                        Collectors.averagingDouble(AssignmentSubmission::getScore)
+                ));
     }
 
-    private byte[] generateExcelFile(String sheetName, List<List<String>> data) {
+    private byte[] generateExcelFile(String sheetName, List<List<String>> data, String chartTitle, String xAxisTitle, String yAxisTitle) {
         try (Workbook workbook = new XSSFWorkbook();
              ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
 
@@ -165,15 +142,56 @@ public class PerformanceService {
                     cell.setCellValue(rowData.get(colIndex));
 
                     if (rowIndex == 0) {
-                        cell.setCellStyle(headerStyle); // Style for headers
+                        cell.setCellStyle(headerStyle);
                     }
                 }
             }
+
+            addBarChart(sheet, data.size(), data.get(0).size(), chartTitle, xAxisTitle, yAxisTitle);
 
             workbook.write(outputStream);
             return outputStream.toByteArray();
         } catch (IOException e) {
             throw new RuntimeException("Failed to generate Excel file", e);
         }
+    }
+
+    private void addBarChart(Sheet sheet, int rowCount, int columnCount, String chartTitle, String xAxisTitle, String yAxisTitle) {
+        // Create a drawing canvas on the sheet
+        XSSFDrawing drawing = (XSSFDrawing) sheet.createDrawingPatriarch();
+
+        // Define the position of the chart on the sheet
+        XSSFClientAnchor anchor = drawing.createAnchor(0, 0, 0, 0, columnCount + 2, 1, columnCount + 8, 15);
+
+        // Create the chart
+        XDDFChart chart = drawing.createChart(anchor);
+        chart.setTitleText(chartTitle);
+        chart.setTitleOverlay(false);
+
+        // Define the data range for the chart
+        XDDFCategoryAxis bottomAxis = chart.createCategoryAxis(AxisPosition.BOTTOM);
+        bottomAxis.setTitle(xAxisTitle);
+
+        XDDFValueAxis leftAxis = chart.createValueAxis(AxisPosition.LEFT);
+        leftAxis.setTitle(yAxisTitle);
+        leftAxis.setCrossBetween(AxisCrossBetween.BETWEEN);
+
+        // Define the data sources for the chart
+        XDDFDataSource<String> xAxisData = XDDFDataSourcesFactory.fromStringCellRange((XSSFSheet) sheet,
+                new CellRangeAddress(1, rowCount - 1, 0, 0)); // Student names
+        XDDFNumericalDataSource<Double> yAxisData = XDDFDataSourcesFactory.fromNumericCellRange((XSSFSheet) sheet,
+                new CellRangeAddress(1, rowCount - 1, columnCount - 1, columnCount - 1)); // Scores or percentages
+
+        // Create the chart data
+        XDDFBarChartData barChartData = (XDDFBarChartData) chart.createData(ChartTypes.BAR, bottomAxis, leftAxis);
+        XDDFBarChartData.Series series = (XDDFBarChartData.Series) barChartData.addSeries(xAxisData, yAxisData);
+        series.setTitle(sheet.getRow(0).getCell(columnCount - 1).getStringCellValue(), null); // Set the series title
+
+        // Customize bar chart appearance
+        barChartData.setBarDirection(BarDirection.COL);
+        barChartData.setBarGrouping(BarGrouping.CLUSTERED);
+
+        // Plot the chart
+        chart.plot(barChartData);
     }
 }
